improved releng poms and fixed support to jacoco and sonar